add password hash. Redundant

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,5 +5,5 @@ languagepage.greeting=Good Morning
 languagepage.message=How Are you {0}? Today is a cheerful day {1}?
 name =  Name must be a minimum of 5 letters and not more than 50
 email = invalid email!
-userid = User id must be a minimum of 6 letters
-password = Password must consist a min of 6 letters
+userid = User id must be a minimum of 6 letters.
+password = Password must consist a min of 6 letters.
