fix validation for addemployee form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,4 @@ name =  Name must be a minimum of 5 letters and not more than 50
 email = invalid email!
 userid = User id must be a minimum of 6 letters.
 password = Password must consist a min of 6 letters.
+userexist = Userid already exist;
